added intro bio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <h2>{{data.name}}</h2> 
     </div>
 
+    <div>Tom is Assistant Professor of Computer Science in the Department of Math and Computer Science at Wheaton College in Norton, Massachusetts. He was a Fulbright-Nehru Visiting Lecturer at the Hemchandracharya North Gujarat University in Patan, Gujarat, India.</div>
+
 
     <div>
       <p>At Wheaton, Tom teaches Computer Science courses in the Department of Mathematics and Computer Science. He is the founder of <strong>WHALE</strong>, the <a href="http://www.wheatoncollege.edu/whale/"><strong>WH</strong>eaton <strong>A</strong>utomomous <strong>LE</strong>arning Lab and Makerspace</a>.</p> 
