--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/flat-ui.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
     <script src="js/pubs.json"></script>
     <script src="js/tarmstro.js"></script>
@@ -18,25 +19,35 @@
         <div class="col-md-6">
           <h2>{{data.name}}</h2>
           <blockquote>Tom is {{data.title}} Professor of Computer Science in the <a href="http://wheatoncollege.edu/computer-science/">Department of Math and Computer Science</a> at <a href="http://www.wheatoncollege.edu/">Wheaton College</a> in Norton, Massachusetts. He was a <a href="http://www.cies.org/us_scholars/us_awards/">Fulbright</a>-<a href="http://www.usief.org.in/">Nehru</a> Visiting Lecturer at the <a href="http://www.ngu.ac.in/"> Hemchandracharya North Gujarat University </a> in <a href="http://maps.google.com/maps?q=patan+gujarat">Patan, Gujarat, India</a>.</blockquote>
-          <div class="iconbar iconbar-horizontal">
-            <ul>
-              <li>
-                <a href="http://scholar.google.com/citations?user=Nqz5JNsAAAAJ" class="fui-googleplus"></a>
-              </li>
-              <li>
-                <a href="https://twitter.com/tarmstro" class="fui-twitter"></a>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/whalelab" class="fui-facebook"></a>
-              </li>
-              <li>
-                <a href="http://www.linkedin.com/in/tarmstro/" class="fui-linkedin"></a>
-              </li>
-              <li>              
-                <a href="https://maps.google.com/maps?q=26+E.+Main+Street+%2F%2F+Norton,+MA+02766&hl=en&sll=41.50035,-71.499023&sspn=1.50779,2.842712&hnear=26+E+Main+St,+Norton,+Bristol,+Massachusetts+02766&t=m&z=16&iwloc=A" class="fui-mail"></a>
-              </li>
-            </ul>
-          </div>              
+          <div class="row">
+            <div class="col-md-11 col-md-offset-1">
+              <div class="iconbar iconbar-horizontal">
+                <ul>
+                  <li>
+                    <a href="http://scholar.google.com/citations?user=Nqz5JNsAAAAJ" class="fa fa-google-plus"></a>
+                  </li>
+                  <li>
+                    <a href="https://twitter.com/tarmstro" class="fa fa-twitter"></a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/tarmstro" class="fa fa-github"></a>
+                  </li>
+                  <li>
+                    <a href="http://www.linkedin.com/in/tarmstro/" class="fa fa-linkedin"></a>
+                  </li>
+                  <li>              
+                    <a href="https://maps.google.com/maps?q=26+E.+Main+Street+%2F%2F+Norton,+MA+02766&hl=en&sll=41.50035,-71.499023&sspn=1.50779,2.842712&hnear=26+E+Main+St,+Norton,+Bristol,+Massachusetts+02766&t=m&z=16&iwloc=A" class="fa fa-map-marker"></a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/whalelab" class="fa fa-facebook"></a>
+                  </li>
+                  <li>
+                    <a href="mailto:tarmstro@wheatoncollege.edu" class="fa fa-envelope-o"></a>
+                  </li>
+                </ul>
+              </div>   
+            </div>
+          </div>           
         </div>
       </div>
 
