added offline possibilities

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/flat-ui.css" rel="stylesheet">
-    <link href="http:////maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png?v=2">
     <title>Tom Armstrong &mdash; Associate Professor of Computer Science</title>
   </head>
@@ -22,7 +22,7 @@
               <div class="iconbar iconbar-horizontal">
                 <ul>
                   <li>
-                    <a href="http://scholar.google.com/citations?user=Nqz5JNsAAAAJ" class="fa fa-google-plus"></a>
+                    <a href="http://scholar.google.com/citations?user=Nqz5JNsAAAAJ" class="fa fa-book"></a>
                   </li>
                   <li>
                     <a href="https://twitter.com/tarmstro" class="fa fa-twitter"></a>
@@ -98,6 +98,12 @@
                 </div>
               </div>
 
+
+              <div ng-switch-when="proj">
+                <h3 class="text-center">Projects</h3>
+                <p>WHALE, CineMap, MVBoP, American Centuries</p>
+              </div>
+
             </div>
           </div>
         </div>
@@ -125,8 +131,8 @@
     ga('create', 'UA-71379-11', 'auto');
     ga('send', 'pageview');
   </script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/angular.min.js"></script>
   <script src="js/pubs.json"></script>
   <script src="js/tarmstro.js"></script>
 
