--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Tom Armstrong &mdash; Associate Professor of Computer Science</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -22,10 +22,26 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/font-awesome.css">
+  <style>
+    html {
+      background: rgb(236,236,236);
+      background-size: cover;
+    }
+    a {
+      color: orange;
+      font-weight: bold;
+    }
+    img {
+      border:1px solid #021a40;
+    }
+    th {
+      font-size: 2rem;
+    }
+  </style>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.ico">
 
 </head>
 <body>
@@ -62,11 +78,8 @@
         <h1>Tom Armstrong</h1>
         <p>Tom is Associate Professor of Computer Science in the <a href="http://wheatoncollege.edu/computer-science/">Department of Math and Computer Science</a> at <a href="http://www.wheatoncollege.edu/">Wheaton College</a> in Norton, Massachusetts. In Spring 2016, he is on sabbatical from Wheaton. He served as Resident Director of the <a href="http://wheatoncollege.edu/bhutan/">Wheaton in Bhutan</a> program at the <a href="http://www.rtc.bt/">Royal Thimphu College</a>. He was a <a href="http://www.cies.org/us_scholars/us_awards/">Fulbright</a>-<a href="http://www.usief.org.in/">Nehru</a> Scholar at the <a href="http://www.ngu.ac.in/"> Hemchandracharya North Gujarat University </a> in <a href="http://maps.google.com/maps?q=patan+gujarat">Patan, Gujarat, India</a></p>
       </div>
-      <div class="one column">
-        &nbsp;
-      </div>
-      <div class="four columns">
-        <img src="images/tom.jpg" class="u-max-full-width" style="border-radius: 10px;">
+      <div class="five columns">
+        <img src="images/tom_bhutan.jpg" class="u-max-full-width" style="border-radius: 10px;">
       </div>
     </div>
   </div>
