--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
       background-size: cover;
     }
     a {
-      color: orange;
-      font-weight: bold;
+      color: rgb(103, 128, 159);
     }
     img {
-      border:1px solid #021a40;
+      border:1px solid rgb(103, 128, 159);
     }
     th {
       font-size: 2rem;
