--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       background-size: cover;
     }
     a {
-      color: rgb(103, 128, 159);
+      color: rgb(211, 84, 0);
     }
     img {
-      border:1px solid rgb(103, 128, 159);
+      border:1px solid black;
     }
     th {
       font-size: 2rem;
