--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     a {
       color: rgb(211, 84, 0);
     }
+    a:hover {
+      color: rgb(243, 156, 18);
+    }
     img {
       border:1px solid black;
     }
