--- a/index.html
+++ b/index.html
@@ -65,33 +65,10 @@
       <div class="two columns" style="margin-top: 15%">
         &nbsp;
       </div>
-      <div class="eight columns" style="margin-top: 15%">
-        <table class="u-full-width">
-          <thead>
-            <tr>
-              <th><a href="http://scholar.google.com/citations?user=Nqz5JNsAAAAJ"><i class="fa fa-book fa-lg fa-fw"></i></a></th>
-              <th><a href="https://twitter.com/tarmstro"><i class="fa fa-twitter fa-lg fa-fw"></i></a></th>
-              <th><a href="https://github.com/tarmstro"><i class="fa fa-github fa-lg fa-fw"></i></a></th>
-              <th><a href="http://www.linkedin.com/in/tarmstro/"><i class="fa fa-linkedin fa-lg fa-fw"></i></a></th>
-              <th><a href="https://maps.google.com/maps?q=26+E.+Main+Street+%2F%2F+Norton,+MA+02766&hl=en&sll=41.50035,-71.499023&sspn=1.50779,2.842712&hnear=26+E+Main+St,+Norton,+Bristol,+Massachusetts+02766&t=m&z=16&iwloc=A"><i class="fa fa-map-marker fa-lg fa-fw"></i></a></th>
-              <th><a href="https://www.facebook.com/whalelab"><i class="fa fa-facebook fa-lg fa-fw"></i></a></th>
-              <th><a href="mailto:tarmstro@wheatoncollege.edu"><i class="fa fa-envelope-o fa-lg fa-fw"></i></a></th>
-              <th><a href="https://github.com/tarmstro/vitae/raw/master/armstrong_tom_cv.pdf"><i class="fa fa-institution fa-lg fa-fw"></i></a></th>
-            </tr>
-          </thead>
-        </table>
-      </div>
     </div>
     <div class="row">
-      <div class="one column">
-        &nbsp;
-      </div>
       <div class="five columns">
-        <h1>Tom Armstrong</h1>
-        <p>Tom is Associate Professor of Computer Science in the <a href="http://wheatoncollege.edu/computer-science/">Department of Math and Computer Science</a> at <a href="http://www.wheatoncollege.edu/">Wheaton College</a> in Norton, Massachusetts. He founded and managed the <b>WH</b>eaton <b>A</b>utonomous <b>LE</b>arning Makerspace. He served as Resident Director of the <a href="http://wheatoncollege.edu/bhutan/">Wheaton in Bhutan</a> program at the <a href="http://www.rtc.bt/">Royal Thimphu College</a> and as a <a href="http://www.cies.org/us_scholars/us_awards/">Fulbright</a>-<a href="http://www.usief.org.in/">Nehru</a> Scholar at the <a href="http://www.ngu.ac.in/"> Hemchandracharya North Gujarat University </a> in <a href="http://maps.google.com/maps?q=patan+gujarat">Patan, Gujarat, India</a></p>
-      </div>
-      <div class="five columns">
-        <img src="images/tom_bhutan.jpg" class="u-max-full-width" style="border-radius: 10px;">
+        <img src="tarmstro.jpg" class="u-max-full-width" style="border-radius: 10px;">
       </div>
     </div>
   </div>
