--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="five columns">
-        <img src="tarmstro.jpg" class="u-max-full-width" style="border-radius: 10px;">
+      <div class="one column">
+        <img src="tarmstro.jpg" class="u-max-full-width" style="border-radius: 5px;">
       </div>
     </div>
   </div>
