--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="one column">
+      <div class="ten columns">
         <img src="tarmstro.jpg" class="u-max-full-width" style="border-radius: 5px;">
       </div>
     </div>
