--- a/index.html
+++ b/index.html
@@ -62,12 +62,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="two columns" style="margin-top: 15%">
-        &nbsp;
-      </div>
-    </div>
-    <div class="row">
-      <div class="ten columns">
+      <div class="twelve columns">
         <img src="tarmstro.jpg" class="u-max-full-width" style="border-radius: 5px;">
       </div>
     </div>
