--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Tom Armstrong &mdash; Associate Professor of Computer Science</title>
+  <title>Tom Armstrong &mdash; Learner & Educator</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
